fix: Scroll to top button is visible on page load

--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ ul.timeline > li:hover {
 }
 
 .btn-back-to-top {
+  visibility: hidden;
   position: fixed;
   bottom: 0;
   right: 0;
